Add example workaround for server-assigned-ids in cola 0.1.x

--- a/app/todo/section.html
+++ b/app/todo/section.html
@@ -12,6 +12,9 @@
 		<ul class="topcoat-list__container">
 			<li class="topcoat-list__item display description">
 				<span class="description"></span>
+                <!-- for debugging -->
+				<span class="clientId"></span>
+				<span class="serverId"></span>
 			</li>
 		</ul>
 	</section>
@@ -25,7 +28,7 @@
 			<input type="checkbox" class="topcoat-switch__input" name="complete" checked>
 			<div class="topcoat-switch__toggle"></div>
 		</label>
-		<input class="hidden" name="id"/>
+		<!--<input class="hidden" name="id"/>-->
 		<input class="hidden" name="version"/>
 		<input class="hidden" name="class"/>
 		<br/><br/>
