Use cola strategy to handle clientIds and to prevent unnecessary loopback to self.update--seems to work, but might be missing some cases. Remove clientId handling from controller.

--- a/app/todo/section.html
+++ b/app/todo/section.html
@@ -28,7 +28,7 @@
 			<input type="checkbox" class="topcoat-switch__input" name="complete" checked>
 			<div class="topcoat-switch__toggle"></div>
 		</label>
-		<!--<input class="hidden" name="id"/>-->
+		<input class="hidden" name="id" value=""/>
 		<input class="hidden" name="version"/>
 		<input class="hidden" name="class"/>
 		<br/><br/>
